# ChangeLog for dev-lang/elixir
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.5 2013/09/03 22:55:04 hasufell Exp $

*elixir-0.10.2 (03 Sep 2013)

  03 Sep 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.2.ebuild:
  version bump

*elixir-0.10.1 (04 Aug 2013)

  04 Aug 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.1.ebuild:
  version bump

*elixir-0.10.0 (17 Jul 2013)

  17 Jul 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.0.ebuild:
  version bump

  13 Jul 2013; Julian Ospald <hasufell@gentoo.org> elixir-0.9.3.ebuild:
  add x86 arch

*elixir-0.9.3 (13 Jul 2013)

  13 Jul 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.9.3.ebuild,
  +files/elixir-0.9.3-makefile.patch, +metadata.xml:
  initial import wrt #476288