@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/elixir
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.5 2013/09/03 22:55:04 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.6 2013/10/03 12:40:26 hasufell Exp $
+
+*elixir-0.10.3 (03 Oct 2013)
+
+  03 Oct 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.3.ebuild:
+  version bump
 
 *elixir-0.10.2 (03 Sep 2013)
 
